--- a/melonClicker/melonCode/clickerStyle.css
+++ b/melonClicker/melonCode/clickerStyle.css
@@ -2,8 +2,10 @@
     position: relative;
     bottom: 8px;
     width: 70vw;
-    height: 800px;
+    height: 94vh;
     margin: auto;
+    margin-top: 20px;
+    margin-bottom: 0px;
     background: rgb(109,246,168);
     background: linear-gradient(90deg, rgba(109,246,168,1) 0%, rgba(173,255,210,1) 100%);
     border: 5px solid rgb(172, 217, 199);
@@ -49,8 +51,6 @@
     top: 80px;
 }
 
-
-
 .melonButton {
     position: relative;
     left: 39px;
@@ -69,14 +69,142 @@
     display: block;
 }
 
-.melons {
-    width: 55%;
-    height: 300px;
-    float: left;
+.upgradeList {
+    position: absolute;
+    top: 340px;
+    width: 400px;
+    height: 368px;
+    background: rgb(255,255,255);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.3335084033613446) 47%, rgba(255,255,255,0.2046568627450981) 100%);
+    bottom: 30px;
     display: block;
-    margin-top: 20px;
-    border-radius: 30px;
+}
+
+.upgradeContainer {
+    width: 370px;
+    height: 300px;;
+    margin-left: 15px;
+    margin-top: 30px;
+}
+
+.upgrades {
+    display: block;
+    width: 350px;
+    height: 300px;
     position: relative;
-    left: 50px;
-    top: -5px;
+    margin-left: 10px;
+    margin-top: 20px;
+    border-radius: 20px;
+    background: rgb(183, 232, 151);
+    z-index: 10;
+}
+
+.melonCounter {
+    position: relative;
+    display: inline-block;
+    width: 300px;
+    height: 150px;
+    top: 23vh;
+    left: 12vw;
+    text-align: center;
+    font-size: 60px;
+    font-family: "Century Gothic";
+}
+
+.melonAmount {
+    position: absolute;
+    text-align: center;
+    font-size: 100px;
+    width: 600px;
+    height: 120px;
+    right: 10px;
+    top: 4vw;
+    display: inline-block;
+    font-family: "Century Gothic";
+}
+
+.melonPerSec {
+    text-align: center;
+    width: 120px;
+    height: 20px;
+    position: absolute;
+    right: 17.5vw;
+    bottom: 10vh;
+    font-family: "Century Gothic";
+}
+
+.buildingContainer{
+    position: relative;
+    display: block;
+    float: right;
+    top: 2vh;
+    width: 43vw;
+    height: 48vh;
+}
+
+.building {
+    background: white;
+    margin-left: 20px;
+    margin-bottom: 2vh;
+    width: 270px;
+    height: 100px;
+    display: inline-block;
+    vertical-align: top;
+    border-radius: 5px;
+}
+
+#buildingName{
+    width: 130px;
+    height: 30px;   
+    font-family: "Century Gothic";
+    font-weight: bold;
+    position: relative;
+    font-size: 130%;
+    top: 2px;
+    left: 5px;
+    z-index: 10;
+}
+
+#addedMelonsPerSec{
+    width: 100px;
+    height: 30px;
+    font-family: "Century Gothic";
+    font-weight: bold;
+    position: relative;
+    top: -24px;
+    float: right;
+    right: 5px;
+    color: darkgreen;
+}
+
+.price{
+    width: 140px;
+    height: 30px;
+    font-family: "Century Gothic";
+    font-weight: bold;
+    position: relative;
+    text-align: right;
+    left: 120px;
+    top: 40px;
+}
+
+.count{
+    width: 100px;
+    height: 30px;
+    font-family: "Century Gothic";
+    font-weight: bold;
+    position: relative;
+    font-size: 350%;
+    color: rgba(0, 0, 0, 0.2);
+    left: 80px;
+    top: -25px;
+}
+
+#picture {
+    width: 60px;
+    height: 60px;
+    position: relative;
+    left: 10px;
+    top: -60px;
+    border-radius: 5px;
 }
