--- a/melonClicker/melonCode/clickerStyle.css
+++ b/melonClicker/melonCode/clickerStyle.css
@@ -69,6 +69,11 @@
     display: block;
 }
 
+.buttonHolder{
+    position: relative;
+    top: -10px;
+}
+
 .upgradeList {
     position: absolute;
     top: 340px;
@@ -78,6 +83,7 @@
     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.3335084033613446) 47%, rgba(255,255,255,0.2046568627450981) 100%);
     bottom: 30px;
     display: block;
+    z-index: 100;
 }
 
 .upgradeContainer {
@@ -123,6 +129,51 @@
     font-family: "Century Gothic";
 }
 
+.melonClickUpgrade{
+    width: 250px;
+    height: 30px;
+    background: #ff6666;
+    border-radius: 20px;
+    z-index: 100;
+    position: absolute;
+    top: 38vh;
+    left: 5vw;
+}
+
+.clickPrice{
+    color: black;
+    font-family: "Century Gothic";
+    float: left;
+    Font-weight: bold;
+    position: relative;
+    z-index: 1000;
+    top: 30px;
+    left: 2vw;
+    font-size: 110%;
+}
+
+.clickAmount{
+    position: relative;
+    left: 40px;
+    bottom: 18px;
+    width: 200px;
+    color: white;
+    font-weight: bold;
+    font-size: 120%;
+    text-align: right;
+    font-family: "Century Gothic";
+}
+
+.amountOfUpgrades {
+    color: white;
+    font-weight: bold;
+    position: relative;
+    bottom: 43px;
+    left: 5px;
+    font-size: 120%;
+    font-family: "Century Gothic";
+}
+
 .melonPerSec {
     text-align: center;
     width: 120px;
@@ -154,7 +205,7 @@
 }
 
 #buildingName{
-    width: 130px;
+    width: 200px;
     height: 30px;   
     font-family: "Century Gothic";
     font-weight: bold;
@@ -169,12 +220,13 @@
     width: 100px;
     height: 30px;
     font-family: "Century Gothic";
-    font-weight: bold;
     position: relative;
     top: -24px;
     float: right;
     right: 5px;
+    font-size: 120%;
     color: darkgreen;
+    text-align: right;
 }
 
 .price{
@@ -185,7 +237,7 @@
     position: relative;
     text-align: right;
     left: 120px;
-    top: 40px;
+    top: 47px;
 }
 
 .count{
